--- a/en/artigos-aceitos.html
+++ b/en/artigos-aceitos.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Wallet - Payday Loan Service Template</title>
+    <title>WER2023 - Accepted Papers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
     <meta name="description" content="This is meta description">
     <meta name="author" content="Themefisher">
@@ -42,10 +42,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                        <li class="nav-item"> <a class="nav-link" href="index.html">Início</a>
+                        <li class="nav-item"> <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">Chamada de trabalhos</a>
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">Call for Papers</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item " href="track-regular.html">Regular Research Track
                                         (WER-RT)</a>
@@ -66,19 +66,19 @@
                             </ul>
                         </li>
                         </li>
-                        <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Artigos
-                                Aceitos</a>
+                        <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Accepted
+                                Papers</a>
                         </li>
-                        <li class="nav-item "> <a class="nav-link" href="programacao.html">Programação</a>
+                        <li class="nav-item "> <a class="nav-link" href="programacao.html">Schedule</a>
                         </li>
-                        <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Palestrantes</a>
+                        <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Speakers</a>
                         </li>
 
-                        <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
+                        <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organization</a>
                         </li>
                     </ul>
-                    <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
-                    <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
+                    <!-- account btn --> <a href="../index.html" class="btn btn-outline-secondary">Portuguese</a>
+                    <a href="inscricao.html" class="btn btn-outline-primary">Registration</a>
                 </div>
             </div>
         </nav>
@@ -94,7 +94,7 @@
             <div class="row g-5">
                 <div class="col-lg-4 mb-2 mb-lg-0">
                     <div class="bg-white shadow rounded-lg p-4 sticky-top" style="top: 30px;">
-                        <h4>Artigos Aceitos &emsp;<a href="http://wer.inf.puc-rio.br/WERpapers/" target="_blank"
+                        <h4>Accepted Papers &emsp;<a href="http://wer.inf.puc-rio.br/WERpapers/" target="_blank"
                                 rel="noopener"><img loading="lazy" decoding="async" src="images/wer/logo_wer_papers.jpg"
                                     alt="Leslie Alexander" class="img-fluid" width="50" height="50"></a></h4>
                         <nav id="TableOfContents">
@@ -129,14 +129,14 @@
                         <!-- regular -->
                         <h3 id="regular-track" class="text-success">Regular Research Track (WER-RT)</h3>
                         <ul>
-                            <li>Artigo:</li>
+                            <li>Paper:</li>
                         </ul>
                         <hr>
 
                         <!-- tutorial -->
                         <h3 id="tutorial-track" class="text-success">Tutorial Track (WER-TT)</h3>
                         <ul>
-                            <li>Artigo:</li>
+                            <li>Paper:</li>
                         </ul>
                         <hr>
 
@@ -144,7 +144,7 @@
                         <h3 id="journal-first-track" class="text-success">
                             Journal First Track (WER-JFT) </h3>
                         <ul>
-                            <li>Artigo:</li>
+                            <li>Paper:</li>
                         </ul>
                         <hr>
 
@@ -152,7 +152,7 @@
                         <h3 id="tools-track" class="text-success">
                             Software Requirement Tools Track (WER-SRTT)</h3>
                         <ul>
-                            <li>Artigo:</li>
+                            <li>Paper:</li>
                         </ul>
                         <hr>
 
@@ -160,7 +160,7 @@
                         <h3 id="masters-track" class="text-success">
                             Master's and Doctoral Track (WER-MDT)</h3>
                         <ul>
-                            <li>Artigo:</li>
+                            <li>Paper:</li>
                         </ul>
                         <hr>
                     </div>
