--- a/en/index.html
+++ b/en/index.html
@@ -83,18 +83,18 @@
   </header>
   <!-- /navigation -->
 
-  <section class="banner bg-tertiary position-relative overflow-hidden">
+  <section class="bg-tertiary position-relative overflow-hidden">
     <div class="container">
       <div class="row align-items-center justify-content-center">
-        <div class="col-lg-4 mb-5 mb-lg-0">
+        <!-- <div class="col-lg-4 mb-5 mb-lg-0">
           <div class="block text-center text-lg-start pe-0 pe-xl-5">
             <h1 class="mb-4">Workshop on Requirements Engineering</h1>
           </div>
-        </div>
-        <div class="col-lg-8">
-          <div class="ps-lg-5 text-center">
-            <img loading="lazy" decoding="async" src="images/wer/inicio.png" alt="banner image" class="w-100">
-          </div>
+        </div> -->
+        <div class="col-lg-12">
+          <!-- <div class="ps-lg-5 text-center"> -->
+          <img loading="lazy" decoding="async" src="images/wer/inicio-3.png" alt="banner image" class="w-100">
+          <!-- </div> -->
         </div>
       </div>
     </div>
@@ -109,7 +109,7 @@
           <div class="section-title">
             <p class="text-primary text-uppercase fw-bold mb-3">Sobre</p>
             <h1>WER 2023</h1>
-            <p class="lead mb-4 mt-4">
+            <p>
               WER is an important forum for discussion of relevant issues in the area of Requirements Engineering. This
               workshop is performed since 1998. The workshop has alternatively held in Latin American countries, Canada,
               Spain and Portugal.</p>
@@ -158,6 +158,7 @@
                 <h3 class="mb-3 text-warning">15 - 17 August 2023</h3>
                 <h4 class="mb-1 text-white">Pontifical Catholic University of Rio Grande do Sul (PUCRS)
                   <h4 />
+                  <h5>Ipiranga Avenue, 6681 - Partenon, Porto Alegre - RS, 90619-900, Brazil</h5>
               </div>
             </div>
           </div>
