--- a/en/inscricao.html
+++ b/en/inscricao.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Wallet - Payday Loan Service Template</title>
+    <title>WER2023 - Registration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
     <meta name="description" content="This is meta description">
     <meta name="author" content="Themefisher">
@@ -44,10 +44,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                        <li class="nav-item"> <a class="nav-link" href="index.html">Início</a>
+                        <li class="nav-item"> <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">Chamada de trabalhos</a>
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">Call for Papers</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item " href="track-regular.html">Regular Research Track
                                         (WER-RT)</a>
@@ -68,19 +68,19 @@
                             </ul>
                         </li>
                         </li>
-                        <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Artigos
-                                Aceitos</a>
+                        <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Accepted
+                                Papers</a>
                         </li>
-                        <li class="nav-item "> <a class="nav-link" href="programacao.html">Programação</a>
+                        <li class="nav-item "> <a class="nav-link" href="programacao.html">Schedule</a>
                         </li>
-                        <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Palestrantes</a>
+                        <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Speakers</a>
                         </li>
 
-                        <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
+                        <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organization</a>
                         </li>
                     </ul>
-                    <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
-                    <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
+                    <!-- account btn --> <a href="../index.html" class="btn btn-outline-secondary">Portuguese</a>
+                    <a href="inscricao.html" class="btn btn-outline-primary">Registration</a>
                 </div>
             </div>
         </nav>
@@ -93,27 +93,27 @@
             <div class="row">
                 <div class="col-lg-12 mx-auto">
                     <div class="content">
-                        <h2>Inscrição no WER 2023</h2>
-                        <p>Veja os valores e as datas de cada lote de inscrição</p>
+                        <h2>Registration</h2>
+                        <!-- <p>Veja os valores e as datas de cada lote de inscrição</p> -->
                         <table>
                             <thead>
                                 <tr>
-                                    <th class="bg-dark text-white">Categoria</th>
-                                    <th class="bg-dark text-white">1º lote</th>
-                                    <th class="bg-dark text-white">2º lote</th>
-                                    <th class="bg-dark text-white">3º lote</th>
+                                    <th class="bg-dark text-white">Category</th>
+                                    <th class="bg-dark text-white">1º Date</th>
+                                    <th class="bg-dark text-white">2º Date</th>
+                                    <th class="bg-dark text-white">3º Date</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td class="text-black text-lg-end">Data</td>
+                                    <td class="text-black text-lg-end">Date</td>
                                     <td class="bg-success text-white">20/06</td>
                                     <td class="bg-warning text-white">29/07</td>
                                     <td class="bg-danger text-white">15/08</td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <b>Autor*</b>
+                                        <b>Author*</b>
                                     </td>
                                     <td>
                                     </td>
@@ -124,7 +124,7 @@
                                 </tr>
                                 <tr class="bg-light">
                                     <td>
-                                        <b>Profissional</b>
+                                        <b>Professional</b>
                                     </td>
                                     <td>
                                     </td>
@@ -135,7 +135,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <b>Estudante de Pós-graduação</b>
+                                        <b>Student - Graduation</b>
                                     </td>
                                     <td>
                                     </td>
@@ -146,7 +146,7 @@
                                 </tr>
                                 <tr class="bg-light">
                                     <td>
-                                        <b>Estudante de Graduação</b>
+                                        <b>Student - Undergraduation</b>
                                     </td>
                                     <td>
                                     </td>
@@ -164,13 +164,12 @@
             <div class="row">
                 <div class="col-lg-12 mx-auto">
                     <div class="content">
-                        <a href="#!" class="btn btn-outline-primary text-black">Clique aqui e
-                            inscreva-se</a>
+                        <a href="#!" class="btn btn-outline-primary text-black">Register</a>
                     </div>
                 </div>
             </div>
             <br>
-            *Cada artigo aceito deve estar associado a uma inscrição na categoria Autor.
+            *Each accepted paper must be associated with an entry in the Author category.
         </div>
     </section>
 
