--- a/en/palestrantes.html
+++ b/en/palestrantes.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
 
 <html lang="en-us">
 
 <head>
     <meta charset="utf-8">
-    <title>Wallet - Payday Loan Service Template</title>
+    <title>WER2023 - Speakers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
     <meta name="description" content="This is meta description">
     <meta name="author" content="Themefisher">
@@ -49,10 +43,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                        <li class="nav-item"> <a class="nav-link" href="index.html">Início</a>
+                        <li class="nav-item"> <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">Chamada de trabalhos</a>
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">Call for Papers</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item " href="track-regular.html">Regular Research Track
                                         (WER-RT)</a>
@@ -73,24 +67,25 @@
                             </ul>
                         </li>
                         </li>
-                        <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Artigos
-                                Aceitos</a>
+                        <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Accepted
+                                Papers</a>
                         </li>
-                        <li class="nav-item "> <a class="nav-link" href="programacao.html">Programação</a>
+                        <li class="nav-item "> <a class="nav-link" href="programacao.html">Schedule</a>
                         </li>
-                        <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Palestrantes</a>
+                        <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Speakers</a>
                         </li>
 
-                        <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
+                        <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organization</a>
                         </li>
                     </ul>
-                    <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
-                    <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
+                    <!-- account btn --> <a href="../index.html" class="btn btn-outline-secondary">Portuguese</a>
+                    <a href="inscricao.html" class="btn btn-outline-primary">Registration</a>
                 </div>
             </div>
         </nav>
     </header>
     <!-- /navigation -->
+
 
     <section class="section">
         <div class="container">
@@ -99,34 +94,34 @@
                     <div class="rounded shadow py-5 px-4">
                         <img loading="lazy" decoding="async" src="images/testimonials/04.jpg" alt="Leslie Alexander"
                             class="img-fluid" width="200" height="200">
-                        <h3 class="mb-3">Nome palestrante 1</h3>
+                        <h3 class="mb-3">Name Speaker 1</h3>
                         <h4>Titulo</h4>
-                        <p class="mb-4">breve descricao
-                        </p> <a class="btn btn-sm btn-outline-primary" href="#palestrante-1">detalhes<i
+                        <p class="mb-4">description
+                        </p> <a class="btn btn-sm btn-outline-primary" href="#palestrante-1">Details<i
                                 class="las la-arrow-right ms-1"></i></a>
                     </div>
                 </div>
                 <!-- palestrante 2 -->
                 <div class="icon-box-item text-center col-lg-4 col-md-6 mb-4">
                     <div class="rounded shadow py-5 px-4">
-                        <img loading="lazy" decoding="async" src="images/testimonials/03.jpg" alt="Leslie Alexander"
+                        <img loading="lazy" decoding="async" src="images/testimonials/01.jpg" alt="Leslie Alexander"
                             class="img-fluid" width="200" height="200">
-                        <h3 class="mb-3">Nome palestrante 2</h3>
+                        <h3 class="mb-3">Name Speaker 2</h3>
                         <h4>Titulo</h4>
-                        <p class="mb-4">breve descricao
-                        </p> <a class="btn btn-sm btn-outline-primary" href="#palestrante-2">detalhes<i
+                        <p class="mb-4">description
+                        </p> <a class="btn btn-sm btn-outline-primary" href="#palestrante-2">Details<i
                                 class="las la-arrow-right ms-1"></i></a>
                     </div>
                 </div>
                 <!-- palestrante 3 -->
                 <div class="icon-box-item text-center col-lg-4 col-md-6 mb-4">
                     <div class="rounded shadow py-5 px-4">
-                        <img loading="lazy" decoding="async" src="images/testimonials/01.jpg" alt="Leslie Alexander"
+                        <img loading="lazy" decoding="async" src="images/testimonials/02.jpg" alt="Leslie Alexander"
                             class="img-fluid" width="200" height="200">
-                        <h3 class="mb-3">Nome palestrante 3</h3>
+                        <h3 class="mb-3">Name Speaker 3</h3>
                         <h4>Titulo</h4>
-                        <p class="mb-4">breve descricao
-                        </p> <a class="btn btn-sm btn-outline-primary" href="#palestrante-3">detalhes<i
+                        <p class="mb-4">description
+                        </p> <a class="btn btn-sm btn-outline-primary" href="#palestrante-3">Details<i
                                 class="las la-arrow-right ms-1"></i></a>
                     </div>
                 </div>
@@ -139,19 +134,19 @@
             <div class="row g-5">
                 <div class="col-lg-4 mb-2 mb-lg-0">
                     <div class="bg-white shadow rounded-lg p-4 sticky-top" style="top: 30px;">
-                        <h4 class="has-line-end">Palestrantes WER 2023</h4>
+                        <h4 class="has-line-end">Speakers WER 2023</h4>
                         <nav id="TableOfContents">
                             <ul>
                                 <li><a href="#palestrante-1">
-                                        <h5 class="text-success">Palestrante 1</h5>
+                                        <h5 class="text-success">Speaker 1</h5>
                                     </a>
                                 </li>
                                 <li><a href="#palestrante-2">
-                                        <h5 class="text-success">Palestrante 2</h5>
+                                        <h5 class="text-success">Speaker 2</h5>
                                     </a>
                                 </li>
                                 <li><a href="#palestrante-3">
-                                        <h5 class="text-success">Palestrante 3</h5>
+                                        <h5 class="text-success">Speaker 3</h5>
                                     </a>
                                 </li>
                             </ul>
@@ -161,23 +156,23 @@
                 <div class="col-lg-8">
                     <div class="content">
                         <!-- Palestrante 1 -->
-                        <h2 id="palestrante-1" class="text-success">Palestrante 1</h2>
+                        <h2 id="palestrante-1" class="text-success">Speaker 1</h2>
                         <img loading="lazy" decoding="async" src="images/testimonials/04.jpg" alt="Leslie Alexander"
                             class="img-fluid" width="200" height="200">
-                        <h5>Instituição: </h5>
-                        <h5>Currículo: </h5>
+                        <h5>Institution: </h5>
+                        <h5>Biography: </h5>
                         <hr>
-                        <h2 id="palestrante-2" class="text-success">Palestrante 2</h2>
-                        <img loading="lazy" decoding="async" src="images/testimonials/04.jpg" alt="Leslie Alexander"
+                        <h2 id="palestrante-2" class="text-success">Speaker 2</h2>
+                        <img loading="lazy" decoding="async" src="images/testimonials/01.jpg" alt="Leslie Alexander"
                             class="img-fluid" width="200" height="200">
-                        <h5>Instituição: </h5>
-                        <h5>Currículo: </h5>
+                        <h5>institution: </h5>
+                        <h5>Biography: </h5>
                         <hr>
-                        <h2 id="palestrante-3" class="text-success">Palestrante 3</h2>
-                        <img loading="lazy" decoding="async" src="images/testimonials/04.jpg" alt="Leslie Alexander"
+                        <h2 id="palestrante-3" class="text-success">Speaker 3</h2>
+                        <img loading="lazy" decoding="async" src="images/testimonials/02.jpg" alt="Leslie Alexander"
                             class="img-fluid" width="200" height="200">
-                        <h5>Instituição: </h5>
-                        <h5>Currículo: </h5>
+                        <h5>Institution: </h5>
+                        <h5>Biography: </h5>
                         <hr>
                     </div>
                 </div>
@@ -186,7 +181,7 @@
     </section>
 
     <!-- footer -->
-    <footer class="section-sm">
+    <footer>
         <div class="container">
             <div class="row justify-content-between">
                 <div class="row align-items-center mt-5 text-center text-md-start">
@@ -199,7 +194,7 @@
                     <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
                         <ul class="list-unstyled list-inline mb-0 text-lg-center">
                             <li class="list-inline-item me-4 text-black">
-                                <h5><a href="mailto:organizacao.wer@gmail.com">Contate-nos:
+                                <h5><a href="mailto:organizacao.wer@gmail.com">Contact us:
                                         organizacao.wer@gmail.com</a></h5>
                             </li>
                         </ul>
