--- a/en/track-masters-doctoral.html
+++ b/en/track-masters-doctoral.html
@@ -6,7 +6,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Wallet - Payday Loan Service Template</title>
+  <title>WER2023 Master's and Doctoral Track</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <meta name="description" content="This is meta description">
   <meta name="author" content="Themefisher">
@@ -44,10 +44,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="nav-item"> <a class="nav-link" href="index.html">Início</a>
+            <li class="nav-item"> <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                role="button" data-bs-toggle="dropdown" aria-expanded="false">Chamada de trabalhos</a>
+                role="button" data-bs-toggle="dropdown" aria-expanded="false">Call for Papers</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item " href="track-regular.html">Regular Research Track (WER-RT)</a>
                 </li>
@@ -64,18 +64,18 @@
               </ul>
             </li>
             </li>
-            <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Artigos Aceitos</a>
+            <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Accepted Papers</a>
             </li>
-            <li class="nav-item "> <a class="nav-link" href="programacao.html">Programação</a>
+            <li class="nav-item "> <a class="nav-link" href="programacao.html">Schedule</a>
             </li>
-            <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Palestrantes</a>
+            <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Speakers</a>
             </li>
 
-            <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
+            <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organization</a>
             </li>
           </ul>
-          <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
-          <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
+          <!-- account btn --> <a href="../index.html" class="btn btn-outline-secondary">Portuguese</a>
+          <a href="inscricao.html" class="btn btn-outline-primary">Registration</a>
         </div>
       </div>
     </nav>
@@ -92,60 +92,66 @@
             </h2>
 
             <div class="content">
-              <h3 id="heading-1" class="text-success">Datas importantes</h3>
+              <h3 id="heading-1" class="text-success">Key Dates</h3>
               <ul>
-                <li>Submissão de Título e Resumo: </li>
-                <li>Submissão do Artigo: </li>
-                <li>Submissão de Resumo e Artigo: </li>
-                <li>Notificação: </li>
-                <li>Versão final: </li>
+                <li>Submit Title and Abstract: </li>
+                <li>Submit Paper: </li>
+                <li>Submit Abstract and Paper: </li>
+                <li>Notification: </li>
+                <li>Camera Ready: </li>
               </ul>
 
-              <h3 id="heading-1" class="text-success">Tópicos de interesse</h3>
-              <p>Os tópicos de interesse não estão listados de forma exaustiva:</p>
+              <h3 id="heading-1" class="text-success">Interest Topics</h3>
+              <p>The topics of interest are not exhaustive listed:</p>
               <ul>
-                <li>Levantamento, análise e documentação, gerenciamento, rastreabilidade, priorização, validação,
-                  verificação e negociação de requisitos;</li>
-                <li>Educação e treinamento em engenharia de requisitos;</li>
-                <li>Engenharia de requisitos para paradigmas de desenvolvimento de software específicos, como orientado
-                  a agentes, orientado a aspectos, orientado a modelos ou orientado a serviços;</li>
-                <li>Engenharia de requisitos para campos específicos, como sistemas de aplicativos móveis, baseados na
-                  Web ou de segurança crítica;</li>
-                <li>Engenharia de requisitos em metodologias ágeis;</li>
-                <li>Linguagens, métodos, processos e ferramentas para especificação de requisitos;</li>
-                <li>Engenharia de software orientada a modelos;</li>
-                <li>Conformidade regulatória.</li>
+                <li>Requirements elicitation, analysis, and documentation, management, traceability, prioritization,
+                  validation, verification, and negotiation;</li>
+                <li>Requirements engineering education and training;</li>
+                <li>Requirements engineering for specific software development paradigms, such as the agent-driven,
+                  aspect-driven, model-driven, or service-driven;</li>
+                <li>Requirements engineering for specific fields, like safety-critical, web-based, or mobile
+                  applications systems;</li>
+                <li>Requirements engineering in agile methodologies;</li>
+                <li>Requirements specification languages, methods, processes, and tools;</li>
+                <li>Model-driven software engineering;</li>
+                <li>Regulatory compliance.</li>
               </ul>
 
-              <h3 id="heading-1" class="text-success">Orientações para submissão</h3>
-              <p>Todos os artigos devem ser submetidos apenas no formato PDF através do sistema de submissão Easychair,
-                e considerando <b><a
+              <h3 id="heading-1" class="text-success">Submission Guidelines</h3>
+
+              <p>All papers must be submitted through the <a
+                  href="https://easychair.org/conferences/?conf=wer2022">Easychair</a> submission system in PDF only,
+                according to the <b><a
+                    href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">LNCS
+                    format</a></b>. Submissions must be written in Portuguese, Spanish or English.</p>
+              <p>Papers should not exceed 7 pages of content for Master's work and 10 pages of content for
+                Doctoral work, formatted according to the <b><a
                     href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">LNCS page
-                    format</a></b>. Submissões devem ser escritas em Portugues, Espanhol ou Inglês.</p>
-              <p>Trabalhos de Mestrado não devem exceder 7 páginas, enquanto os de Doutorado não devem exceder 10
-                páginas. É recomendado, embora não obrigatório, que a pesquisa esteja em uma estágio intermediário, tal
-                que a sugestão dos especialistas possam ser consideradas nas dissertações e teses.</p>
-              <p>Os trabalhos receberão feedback do comitê com questões e sugestões sobre o conteúdo. Os autores devem
-                usar esses comentários para preparar a versão final do artigo. Durante o evento, os trabalhos
-                selecionados devem ser apresentados por estudantes. Nessa ocasião, eles receberão a opinião e críticas
-                positivas de uma banca de convidados, composta de pesquisadores no campo de Engenharia de Requisitos,
-                tanto quanto da audiência.</p>
-              <p>Qualquer artigo que exceda o limite de páginas, não esteja dentro do escopo da conferência ou não siga
-                as diretrizes de formatação será rejeitado sem revisão.</p>
-              <p>Todas as submissões serão revisadas por pelo menos três membros do Comitê do Programa.</p>
-              <p>Todos os trabalhos aceitos serão publicados com Acesso Aberto através do repositório <a
-                  href="http://wer.inf.puc-rio.br/WERpapers/">WERpapers</a></p>
+                    format</a></b>.</p>
+              <p>We recommend, although it is not compulsory, that the research is at an intermediate stage so that
+                experts' suggestions could be included in the MSc and PhD work. The works will receive feedback from the
+                Program Committee with questions and suggestions about its content. The author should use these comments
+                in the preparation of the paper's final version.</p>
+              <p>During the event, the selected works must be presented by students. On this occasion, they will receive
+                opinions and constructive criticism from a Guest Panel, composed of researchers in the field of
+                Requirements Engineering, as well as the audience.</p>
+              <p>All accepted papers will be published with Open Access through the <a
+                  href="http://wer.inf.puc-rio.br/WERpapers/">WERpapers</a> repository.</p>
             </div>
-            <p><a class="btn btn-primary mt-3" href="https://easychair.org/conferences/?conf=wer2022">Submissão</a></p>
+            <p><a class="btn btn-primary mt-3" href="https://easychair.org/conferences/?conf=wer2022">Submission</a></p>
 
-            <h3 id="heading-1" class="text-success">Organização</h3>
+            <h3 id="heading-1" class="text-success">Organization</h3>
 
             <ul>
               <li>
-                <h4 id="heading-4">Coordenação da trilha</h4>
+                <h4 id="heading-4">Master's and Doctoral Track Chairs</h4>
+                <ul>
+                  <li><b>Fernanda Alencar</b> -- Universidade Federal de Pernambuco - Brasil</li>
+                  <li><b>Victor Santander</b> -- Universidade Estadual do Oeste do Paraná - Brasil</li><br>
+                </ul>
               </li>
               <li>
-                <h4 id="heading-4">Comitê do programa</h4>
+                <h4 id="heading-4">Program Committee</h4>
                 <ul>
                   <li></li>
                 </ul>
@@ -159,7 +165,7 @@
   </div>
 
   <!-- footer -->
-  <footer class="section-sm">
+  <footer>
     <div class="container">
       <div class="row justify-content-between">
         <div class="row align-items-center mt-5 text-center text-md-start">
@@ -172,7 +178,7 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <ul class="list-unstyled list-inline mb-0 text-lg-center">
               <li class="list-inline-item me-4 text-black">
-                <h5><a href="mailto:organizacao.wer@gmail.com">Contate-nos:
+                <h5><a href="mailto:organizacao.wer@gmail.com">Contact us:
                     organizacao.wer@gmail.com</a></h5>
               </li>
             </ul>
