--- a/en/track-requirements-tools.html
+++ b/en/track-requirements-tools.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
 
 <html lang="en-us">
 
 <head>
   <meta charset="utf-8">
-  <title>Wallet - Payday Loan Service Template</title>
+  <title>WER2023 - Tools Track</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <meta name="description" content="This is meta description">
   <meta name="author" content="Themefisher">
@@ -49,10 +43,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="nav-item"> <a class="nav-link" href="index.html">Início</a>
+            <li class="nav-item"> <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                role="button" data-bs-toggle="dropdown" aria-expanded="false">Chamada de trabalhos</a>
+                role="button" data-bs-toggle="dropdown" aria-expanded="false">Call for Papers</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item " href="track-regular.html">Regular Research Track (WER-RT)</a>
                 </li>
@@ -69,18 +63,18 @@
               </ul>
             </li>
             </li>
-            <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Artigos Aceitos</a>
+            <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Accepted Papers</a>
             </li>
-            <li class="nav-item "> <a class="nav-link" href="programacao.html">Programação</a>
+            <li class="nav-item "> <a class="nav-link" href="programacao.html">Schedule</a>
             </li>
-            <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Palestrantes</a>
+            <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Speakers</a>
             </li>
 
-            <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
+            <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organization</a>
             </li>
           </ul>
-          <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
-          <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
+          <!-- account btn --> <a href="../index.html" class="btn btn-outline-secondary">Portuguese</a>
+          <a href="inscricao.html" class="btn btn-outline-primary">Registration</a>
         </div>
       </div>
     </nav>
@@ -98,54 +92,62 @@
             </h2>
 
             <div class="content">
-              <h3 id="heading-1" class="text-success">Datas importantes</h3>
+              <h3 id="heading-1" class="text-success">Key Dates</h3>
               <ul>
-                <li>Submissão de Título e Resumo: </li>
-                <li>Submissão do Artigo: </li>
-                <li>Submissão de Resumo e Artigo: </li>
-                <li>Notificação: </li>
-                <li>Versão final: </li>
+                <li>Submit Title and Abstract: </li>
+                <li>Submit Paper: </li>
+                <li>Submit Abstract and Paper: </li>
+                <li>Notification: </li>
+                <li>Camera Ready: </li>
               </ul>
 
-              <h3 id="heading-1" class="text-success">Tópicos de interesse</h3>
-              <p>Os tópicos de interesse não estão listados de forma exaustiva:</p>
+              <h3 id="heading-1" class="text-success">Interest Topics</h3>
+              <p>The topics of interest are not exhaustive listed:</p>
               <ul>
-                <li>Levantamento, análise e documentação, gerenciamento, rastreabilidade, priorização, validação,
-                  verificação e negociação de requisitos;</li>
-                <li>Educação e treinamento em engenharia de requisitos;</li>
-                <li>Engenharia de requisitos para paradigmas de desenvolvimento de software específicos, como orientado
-                  a agentes, orientado a aspectos, orientado a modelos ou orientado a serviços;</li>
-                <li>Engenharia de requisitos para campos específicos, como sistemas de aplicativos móveis, baseados na
-                  Web ou de segurança crítica;</li>
-                <li>Engenharia de requisitos em metodologias ágeis;</li>
-                <li>Linguagens, métodos, processos e ferramentas para especificação de requisitos;</li>
-                <li>Engenharia de software orientada a modelos;</li>
-                <li>Conformidade regulatória.</li>
+                <li>Requirements elicitation, analysis, and documentation, management, traceability, prioritization,
+                  validation, verification, and negotiation;</li>
+                <li>Requirements engineering education and training;</li>
+                <li>Requirements engineering for specific software development paradigms, such as the agent-driven,
+                  aspect-driven, model-driven, or service-driven;</li>
+                <li>Requirements engineering for specific fields, like safety-critical, web-based, or mobile
+                  applications systems;</li>
+                <li>Requirements engineering in agile methodologies;</li>
+                <li>Requirements specification languages, methods, processes, and tools;</li>
+                <li>Model-driven software engineering;</li>
+                <li>Regulatory compliance.</li>
               </ul>
 
-              <h3 id="heading-1" class="text-success">Orientações para submissão</h3>
-              <p>Todos os artigos devem ser submetidos apenas no formato PDF através do sistema de submissão Easychair,
-                e considerando o formato LNCS. Submissões devem ser escritas em Portugues, Espanhol ou Inglês.</p>
-              <p>Submissões para Software Requirements Tool Track devem incluir um artigo e um video Demo com comentário
-                em áudio. O artigo deve ter no máximo 10 páginas e ser formatado de acordo com o <b><a
-                    href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">LNCS page
+              <h3 id="heading-1" class="text-success">Submission Guidelines</h3>
+              <p>All papers must be submitted through the <b></b><a
+                  href="https://easychair.org/conferences/?conf=wer2022">Easychair</a> submission system in PDF only,
+                according to the <b><a
+                    href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">LNCS
                     format</a></b>.</p>
-              <p>Qualquer artigo que exceda o limite de páginas, não esteja dentro do escopo da conferência ou não siga
-                as diretrizes de formatação será rejeitado sem revisão.</p>
-              <p>Todas as submissões serão revisadas por pelo menos três membros do Comitê do Programa.</p>
-              <p>Todos os trabalhos aceitos serão publicados com Acesso Aberto através do repositório <a
-                  href="http://wer.inf.puc-rio.br/WERpapers/">WERpapers<br />
-                </a><a class="btn btn-primary mt-3" href="https://easychair.org/conferences/?conf=wer2022">Submissão</a>
+              <p>Submissions must be written in Portuguese, Spanish or English.Submissions for the Software Requirements
+                Tool track must include a paper and a demo video with audio comments. The paper must have at most 10
+                pages, formatted according to the <a
+                  href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">LNCS page
+                  format</a>.</p>
+              <p>Any paper that: exceeds the page limit, is not within the scope of the conference, or do not follow the
+                formatting guidelines will be desk-rejected without review.</p>
+              <p>All submissions are going to be peer-reviewed by at least three members of the Program Committee.</p>
+              <p>All accepted papers will be published with Open Access through the <a
+                  href="http://wer.inf.puc-rio.br/WERpapers/">WERpapers</a> repository.</p>
+              </a><a class="btn btn-primary mt-3" href="https://easychair.org/conferences/?conf=wer2022">Submission</a>
               </p>
 
-              <h3 id="heading-1" class="text-success">Organização</h3>
+              <h3 id="heading-1" class="text-success">Organization</h3>
 
               <ul>
                 <li>
-                  <h4 id="heading-4">Coordenação da trilha</h4>
+                  <h4 id="heading-4">Software Requirement Tools Track Chai</h4>
+                  <ul>
+                    <li><b>Johnny Marques</b> -- Instituto Tecnológico de Aeronáutica - Brazil</li>
+                    <li><b>Vera Werneck</b> -- Universidade Estadual do Rio de Janeiro - Brazil</li>
+                  </ul>
                 </li>
                 <li>
-                  <h4 id="heading-4">Comitê do programa</h4>
+                  <h4 id="heading-4">Program Committee</h4>
                   <ul>
                     <li></li>
                   </ul>
