--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
             </li>
           </ul>
-          <!-- account btn --> <a href="en/index.html" class="btn btn-outline-secondary">English</a>
+          <a href="en/index.html" class="btn btn-outline-secondary">English</a>
           <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
         </div>
       </div>
@@ -83,23 +83,18 @@
   </header>
   <!-- /navigation -->
 
-  <section class="banner bg-tertiary position-relative overflow-hidden">
+  <section class="bg-tertiary position-relative overflow-hidden">
     <div class="container">
       <div class="row align-items-center justify-content-center">
-        <div class="col-lg-4 mb-5 mb-lg-0">
+        <!-- <div class="col-lg-4 mb-5 mb-lg-0">
           <div class="block text-center text-lg-start pe-0 pe-xl-5">
-            <h1 class="mb-4">Workshop de Engenharia de Requisitos</h1>
-            <!-- <p class="mb-4">We have collected the best offers of credit institutions and banks
-              <br>of Colombia. It remains to choose what suits you as fast as you.
-            </p> <a type="button" class="btn btn-primary" href="#" data-bs-toggle="modal"
-              data-bs-target="#applyLoan">Apply
-              Loan Now <span style="font-size: 14px;" class="ms-2 fas fa-arrow-right"></span></a> -->
+            <h1 class="mb-4">Workshop on Requirements Engineering</h1>
           </div>
-        </div>
-        <div class="col-lg-8">
-          <div class="ps-lg-5 text-center">
-            <img loading="lazy" decoding="async" src="images/wer/inicio.png" alt="banner image" class="w-100">
-          </div>
+        </div> -->
+        <div class="col-lg-12">
+          <!-- <div class="ps-lg-5 text-center"> -->
+          <img loading="lazy" decoding="async" src="images/wer/inicio-3.png" alt="banner image" class="w-100">
+          <!-- </div> -->
         </div>
       </div>
     </div>
@@ -114,7 +109,7 @@
           <div class="section-title">
             <p class="text-primary text-uppercase fw-bold mb-3">Sobre</p>
             <h1>WER 2023</h1>
-            <p class="lead mb-4 mt-4">
+            <p>
               O WER é um importante fórum para discussão de questões relevantes na área de Engenharia de Requisitos. Ele
               é realizado anualmente desde 1998 e tem alternado sua organização e execução entre os países da América
               Latina, Canadá, Espanha e Portugal.</p>
@@ -159,6 +154,7 @@
                 <h3 class="mb-3 text-warning">15 a 17 de agosto de 2023</h3>
                 <h4 class="mb-1 text-white">Pontifícia Universidade Católica do Rio Grande do Sul (PUCRS)
                   <h4 />
+                  <h5>Av. Ipiranga, 6681 - Partenon, Porto Alegre - RS, 90619-900, Brasil</h5>
               </div>
             </div>
           </div>
