--- a/inscricao.html
+++ b/inscricao.html
@@ -79,7 +79,7 @@
                         <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
                         </li>
                     </ul>
-                    <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
+                    <a href="en/index.html" class="btn btn-outline-secondary">English</a>
                     <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
                 </div>
             </div>
