--- a/organizacao.html
+++ b/organizacao.html
@@ -73,7 +73,7 @@
             <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
             </li>
           </ul>
-          <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
+          <a href="en/index.html" class="btn btn-outline-secondary">English</a>
           <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
         </div>
       </div>
@@ -87,6 +87,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <div class="content">
+            <h2>Organização</h2>
             <!-- Steering -->
             <h3 id="steering">Steering Committee</h3>
             <ul>
@@ -104,7 +105,7 @@
             </ul>
 
             <!-- Regular track -->
-            <h3 id="regular-track">Regular Track Program and Tutorial Chairs</h3>
+            <h3 id="regular-track">Regular Track Program Chairs</h3>
             <ul>
               <li><b>Leandro Antonelli</b> -- Universidad Nacional de La Plata, Argentina</li>
               <li><b>Márcia Lucena</b> -- Universidade Federal de Rio Grande do Norte - Brasil</li>
@@ -126,21 +127,21 @@
               <li><b>Victor Santander</b> -- Universidade Estadual do Oeste do Paraná - Brasil</li>
             </ul>
 
-            <!-- masters and doctors track -->
+            <!-- tutorial track -->
             <h3 id="tutorial-track">Tutorial Track Chairs</h3>
             <ul>
               <li><b>Henrique Prado de Sá Sousa</b> -- Universidade Federal do Estado do Rio de Janeiro - Brasil</li>
               <li><b>Paula Angeleri</b> -- Universidade de Belgrano - Argentina</li>
             </ul>
 
-            <!-- masters and doctors track -->
+            <!-- Journal first track -->
             <h3 id="journal-track">Journal First Chairs</h3>
             <ul>
               <li><b>Isabel Brito</b> -- Instituto Politécnico de Beja - Portugal</li>
               <li><b>Carla Silva</b> -- Universidade Federal de Pernambuco - Brasil</li>
             </ul>
 
-            <!-- masters and doctors track -->
+            <!-- Industrial track -->
             <h3 id="industrial-track">Industrial Track Chairs</h3>
             <ul>
               <li><b>Luiz Eduardo Galvão Martins</b> -- Universidade Federal de São Paulo - Brasil</li>
@@ -157,8 +158,8 @@
             <!-- Publicity -->
             <h3 id="publicity">Publicity Chair</h3>
             <ul>
-              <li><b>?</b></li>
-              <li><b>Roberto Avila Paldes</b> -- Centro Universitário de Brasília (UniCEUB) - Brasil</li>
+              <li><b>Rodrigo Santos</b> -- Universidade Federal do Estado do Rio de Janeiro - Brasil</li>
+              <li><b>Roberto Avila Paldes</b> -- Centro Universitário de Brasíli- Brasil</li>
               <li><b>María Florencia Pollo Cattaneo</b> -- Universidad Tecnológica Nacional - Facultad Regional Buenos
                 Aires - Argentina</li>
             </ul>
