--- a/track-journal-first.html
+++ b/track-journal-first.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Wallet - Payday Loan Service Template</title>
+  <title>WER 2023 - Journal First</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <meta name="description" content="This is meta description">
   <meta name="author" content="Themefisher">
@@ -73,7 +73,7 @@
             <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
             </li>
           </ul>
-          <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
+          <a href="en/index.html" class="btn btn-outline-secondary">English</a>
           <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
         </div>
       </div>
@@ -137,7 +137,12 @@
               <ul>
                 <li>
                   <h4 id="heading-4">Coordenação da trilha</h4>
+                  <ul>
+                    <li><b>Isabel Brito</b> -- Instituto Politécnico de Beja - Portugal</li>
+                    <li><b>Carla Silva</b> -- Universidade Federal de Pernambuco - Brasil</li>
+                  </ul>
                 </li>
+
                 <li>
                   <h4 id="heading-4">Comitê do programa</h4>
                   <ul>
