--- a/track-masters-doctoral.html
+++ b/track-masters-doctoral.html
@@ -6,7 +6,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Wallet - Payday Loan Service Template</title>
+  <title>WER2023 - Master's and Doctoral Track</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <meta name="description" content="This is meta description">
   <meta name="author" content="Themefisher">
@@ -74,7 +74,7 @@
             <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
             </li>
           </ul>
-          <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
+          <a href="en/index.html" class="btn btn-outline-secondary">English</a>
           <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
         </div>
       </div>
@@ -143,6 +143,10 @@
             <ul>
               <li>
                 <h4 id="heading-4">Coordenação da trilha</h4>
+                <ul>
+                  <li><b>Fernanda Alencar</b> -- Universidade Federal de Pernambuco - Brasil</li>
+                  <li><b>Victor Santander</b> -- Universidade Estadual do Oeste do Paraná - Brasil</li><br>
+                </ul>
               </li>
               <li>
                 <h4 id="heading-4">Comitê do programa</h4>
@@ -151,7 +155,6 @@
                 </ul>
               </li>
             </ul>
-
           </div>
         </div>
       </div>
