--- a/track-regular.html
+++ b/track-regular.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
 
 <html lang="en-us">
 
@@ -79,7 +73,7 @@
             <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
             </li>
           </ul>
-          <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
+          <a href="en/index.html" class="btn btn-outline-secondary">English</a>
           <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
         </div>
       </div>
@@ -146,7 +140,12 @@
 
             <ul>
               <li>
-                <h4 id="heading-4">Coordenação da trilha</h4>
+                <h4>Coordenação da trilha</h4>
+                <ul>
+                  <li><b>Leandro Antonelli</b> -- Universidad Nacional de La Plata, Argentina</li>
+                  <li><b>Márcia Lucena</b> -- Universidade Federal de Rio Grande do Norte - Brasil</li>
+                  <li><b>Roxana Portugal</b> --Universidad Nacional de San Antonio Abad del Cusco - Peru</li>
+                </ul>
               </li>
               <li>
                 <h4 id="heading-4">Comitê do programa</h4>
