--- a/track-requirements-tools.html
+++ b/track-requirements-tools.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
-
 <html lang="en-us">
 
 <head>
   <meta charset="utf-8">
-  <title>Wallet - Payday Loan Service Template</title>
+  <title>WER2023 - Tools Track</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <meta name="description" content="This is meta description">
   <meta name="author" content="Themefisher">
@@ -79,7 +72,7 @@
             <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
             </li>
           </ul>
-          <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
+          <a href="en/index.html" class="btn btn-outline-secondary">English</a>
           <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
         </div>
       </div>
@@ -143,6 +136,10 @@
               <ul>
                 <li>
                   <h4 id="heading-4">Coordenação da trilha</h4>
+                  <ul>
+                    <li><b>Johnny Marques</b> -- Instituto Tecnológico de Aeronáutica - Brasil</li>
+                    <li><b>Vera Werneck</b> -- Universidade Estadual do Rio de Janeiro - Brasil</li>
+                  </ul>
                 </li>
                 <li>
                   <h4 id="heading-4">Comitê do programa</h4>
