--- a/track-tutorial.html
+++ b/track-tutorial.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Wallet - Payday Loan Service Template</title>
+  <title>WER2023 - Tutorial Track</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <meta name="description" content="This is meta description">
   <meta name="author" content="Themefisher">
@@ -73,7 +73,7 @@
             <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
             </li>
           </ul>
-          <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
+          <a href="en/index.html" class="btn btn-outline-secondary">English</a>
           <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
         </div>
       </div>
@@ -137,8 +137,11 @@
                 <li>
                   <h4 id="heading-4">Coordenação da trilha</h4>
                   <ul>
-                    <li></li>
+                    <li><b>Henrique Prado de Sá Sousa</b> -- Universidade Federal do Estado do Rio de Janeiro - Brasil
+                    </li>
+                    <li><b>Paula Angeleri</b> -- Universidade de Belgrano - Argentina</li>
                   </ul>
+
                 </li>
               </ul>
 
