--- a/artigos-aceitos.html
+++ b/artigos-aceitos.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Wallet - Payday Loan Service Template</title>
+    <title>WER2023 - Accepted papers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
     <meta name="description" content="This is meta description">
     <meta name="author" content="Themefisher">
@@ -77,7 +77,7 @@
                         <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
                         </li>
                     </ul>
-                    <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
+                    <a href="en/index.html" class="btn btn-outline-secondary">English</a>
                     <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
                 </div>
             </div>
