--- a/en/organizacao.html
+++ b/en/organizacao.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Wallet - Payday Loan Service Template</title>
+  <title>WER2023 - Organization</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <meta name="description" content="This is meta description">
   <meta name="author" content="Themefisher">
@@ -43,10 +43,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="nav-item"> <a class="nav-link" href="index.html">Início</a>
+            <li class="nav-item"> <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                role="button" data-bs-toggle="dropdown" aria-expanded="false">Chamada de trabalhos</a>
+                role="button" data-bs-toggle="dropdown" aria-expanded="false">Call for Papers</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item " href="track-regular.html">Regular Research Track (WER-RT)</a>
                 </li>
@@ -63,18 +63,18 @@
               </ul>
             </li>
             </li>
-            <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Artigos Aceitos</a>
+            <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Accepted Papers</a>
             </li>
-            <li class="nav-item "> <a class="nav-link" href="programacao.html">Programação</a>
+            <li class="nav-item "> <a class="nav-link" href="programacao.html">Schedule</a>
             </li>
-            <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Palestrantes</a>
+            <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Speakers</a>
             </li>
 
-            <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
+            <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organization</a>
             </li>
           </ul>
-          <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
-          <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
+          <!-- account btn --> <a href="../index.html" class="btn btn-outline-secondary">Portuguese</a>
+          <a href="inscricao.html" class="btn btn-outline-primary">Registration</a>
         </div>
       </div>
     </nav>
@@ -84,52 +84,54 @@
 
   <section class="section-sm">
     <div class="container">
+      <h2>Organization</h2>
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <div class="content">
+
             <!-- Steering -->
             <h3 id="steering">Steering Committee</h3>
             <ul>
               <li><b>Graciela Hadad</b> -- Universidad Nacional del Oeste - Argentina</li>
-              <li><b>Jaelson Castro</b> -- Universidade Federal de Pernambuco - Brasil</li>
-              <li><b>Julio Leite</b> -- Universidade Federal da Bahia - Brasil</li>
+              <li><b>Jaelson Castro</b> -- Universidade Federal de Pernambuco - Brazil</li>
+              <li><b>Julio Leite</b> -- Universidade Federal da Bahia - Brazil</li>
             </ul>
 
             <!-- Organização local -->
             <h3 id="local-chair">Local Organization Chairs</h3>
             <ul>
-              <li><b>Sabrina Marczak</b> -- Pontifícia Universidade Católica do Rio Grande do Sul - Brasil</li>
+              <li><b>Sabrina Marczak</b> -- Pontifícia Universidade Católica do Rio Grande do Sul - Brazil</li>
               <li><b>Rafafel Parizi</b> -- Pontifícia Universidade Católica do Rio Grande do Sul/Instituto Federal
-                Farroupilha - Brasil</li>
+                Farroupilha - Brazil</li>
             </ul>
 
             <!-- Regular track -->
             <h3 id="regular-track">Regular Track Program and Tutorial Chairs</h3>
             <ul>
               <li><b>Leandro Antonelli</b> -- Universidad Nacional de La Plata, Argentina</li>
-              <li><b>Márcia Lucena</b> -- Universidade Federal de Rio Grande do Norte - Brasil</li>
+              <li><b>Márcia Lucena</b> -- Universidade Federal de Rio Grande do Norte - Brazil</li>
               <li><b>Roxana Portugal</b> --Universidad Nacional de San Antonio Abad del Cusco - Peru</li>
             </ul>
 
             <!-- Software requirements tools track -->
             <h3 id="tools-track">Software Requirement Tools Track Chair</h3>
             <ul>
-              <li><b>Johnny Marques</b> -- Instituto Tecnológico de Aeronáutica - Brasil</li>
-              <li><b>Vera Werneck</b> -- Universidade Estadual do Rio de Janeiro - Brasil</li>
+              <li><b>Johnny Marques</b> -- Instituto Tecnológico de Aeronáutica - Brazil</li>
+              <li><b>Vera Werneck</b> -- Universidade Estadual do Rio de Janeiro - Brazil</li>
             </ul>
 
 
             <!-- masters and doctors track -->
             <h3 id="masters-track">Master's and Doctoral Track Chairs</h3>
             <ul>
-              <li><b>Fernanda Alencar</b> -- Universidade Federal de Pernambuco - Brasil</li>
-              <li><b>Victor Santander</b> -- Universidade Estadual do Oeste do Paraná - Brasil</li>
+              <li><b>Fernanda Alencar</b> -- Universidade Federal de Pernambuco - Brazil</li>
+              <li><b>Victor Santander</b> -- Universidade Estadual do Oeste do Paraná - Brazil</li>
             </ul>
 
             <!-- masters and doctors track -->
             <h3 id="tutorial-track">Tutorial Track Chairs</h3>
             <ul>
-              <li><b>Henrique Prado de Sá Sousa</b> -- Universidade Federal do Estado do Rio de Janeiro - Brasil</li>
+              <li><b>Henrique Prado de Sá Sousa</b> -- Universidade Federal do Estado do Rio de Janeiro - Brazil</li>
               <li><b>Paula Angeleri</b> -- Universidade de Belgrano - Argentina</li>
             </ul>
 
@@ -137,13 +139,13 @@
             <h3 id="journal-track">Journal First Chairs</h3>
             <ul>
               <li><b>Isabel Brito</b> -- Instituto Politécnico de Beja - Portugal</li>
-              <li><b>Carla Silva</b> -- Universidade Federal de Pernambuco - Brasil</li>
+              <li><b>Carla Silva</b> -- Universidade Federal de Pernambuco - Brazil</li>
             </ul>
 
             <!-- masters and doctors track -->
             <h3 id="industrial-track">Industrial Track Chairs</h3>
             <ul>
-              <li><b>Luiz Eduardo Galvão Martins</b> -- Universidade Federal de São Paulo - Brasil</li>
+              <li><b>Luiz Eduardo Galvão Martins</b> -- Universidade Federal de São Paulo - Brazil</li>
               <li><b>?</b></li>
             </ul>
 
@@ -151,14 +153,14 @@
             <h3 id="proceedings">Proceedings Chairs</h3>
             <ul>
               <li><b>Roxana Portugal</b> -- Universidad Nacional de San Antonio Abad del Cusco - Peru</li>
-              <li><b>Lyrene Fernandes da Silva</b> -- Universidade Federal de Rio Grande do Norte - Brasil</li>
+              <li><b>Lyrene Fernandes da Silva</b> -- Universidade Federal de Rio Grande do Norte - Brazil</li>
             </ul>
 
             <!-- Publicity -->
             <h3 id="publicity">Publicity Chair</h3>
             <ul>
-              <li><b>?</b></li>
-              <li><b>Roberto Avila Paldes</b> -- Centro Universitário de Brasília (UniCEUB) - Brasil</li>
+              <li><b>Rodrigo Santos</b> -- Universidade Federal do Estado do Rio de Janeiro - Brazil</li>
+              <li><b>Roberto Avila Paldes</b> -- Centro Universitário de Brasília (UniCEUB) - Brazil</li>
               <li><b>María Florencia Pollo Cattaneo</b> -- Universidad Tecnológica Nacional - Facultad Regional Buenos
                 Aires - Argentina</li>
             </ul>
@@ -184,7 +186,7 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <ul class="list-unstyled list-inline mb-0 text-lg-center">
               <li class="list-inline-item me-4 text-black">
-                <h5><a href="mailto:organizacao.wer@gmail.com">Contate-nos:
+                <h5><a href="mailto:organizacao.wer@gmail.com">Contact us:
                     organizacao.wer@gmail.com</a></h5>
               </li>
             </ul>
