--- a/en/programacao.html
+++ b/en/programacao.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Wallet - Payday Loan Service Template</title>
+    <title>WER2023 - Schedule</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
     <meta name="description" content="This is meta description">
     <meta name="author" content="Themefisher">
@@ -43,10 +43,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                        <li class="nav-item"> <a class="nav-link" href="index.html">Início</a>
+                        <li class="nav-item"> <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">Chamada de trabalhos</a>
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">Call for Papers</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item " href="track-regular.html">Regular Research Track
                                         (WER-RT)</a>
@@ -67,19 +67,19 @@
                             </ul>
                         </li>
                         </li>
-                        <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Artigos
-                                Aceitos</a>
+                        <li class="nav-item bg-info"> <a class="nav-link" href="artigos-aceitos.html">Accepted
+                                Papers</a>
                         </li>
-                        <li class="nav-item "> <a class="nav-link" href="programacao.html">Programação</a>
+                        <li class="nav-item "> <a class="nav-link" href="programacao.html">Schedule</a>
                         </li>
-                        <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Palestrantes</a>
+                        <li class="nav-item "> <a class="nav-link" href="palestrantes.html">Speakers</a>
                         </li>
 
-                        <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
+                        <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organization</a>
                         </li>
                     </ul>
-                    <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
-                    <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
+                    <!-- account btn --> <a href="../index.html" class="btn btn-outline-secondary">Portuguese</a>
+                    <a href="inscricao.html" class="btn btn-outline-primary">Registration</a>
                 </div>
             </div>
         </nav>
@@ -93,24 +93,24 @@
             <div class="row">
                 <div class="col-lg-12 mx-auto">
                     <div class="content">
-                        <h2>Programação</h2>
-                        <p>Veja a programação do WER 2023.</p>
+                        <h2>Schedule</h2>
+                        <!-- <p>Veja a programação do WER 2023.</p> -->
                         <table>
                             <thead>
                                 <tr>
-                                    <th class="bg-dark text-white">15/08 - <em>Terça-feira</em>&emsp;<a
-                                            href="#15-08">Detalhes</a></th>
-                                    <th class="bg-dark text-white">16/08 - <em>Quarta-feira</em>&emsp;<a
-                                            href="#16-08">Detalhes</a></th>
-                                    <th class="bg-dark text-white">17/08 - <em>Quinta-feira</em>&emsp;<a
-                                            href="#17-08">Detalhes</a></th>
+                                    <th class="bg-dark text-white">August 15th - <em>Tuesday</em>&emsp;<a
+                                            href="#15-08">Details</a></th>
+                                    <th class="bg-dark text-white">August 16th - <em>Wednesday</em>&emsp;<a
+                                            href="#16-08">Details</a></th>
+                                    <th class="bg-dark text-white">August 17th - <em>Thursday</em>&emsp;<a
+                                            href="#17-08">Details</a></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td class="bg-success text-white">Manhã</td>
-                                    <td class="bg-success text-white">Manhã</td>
-                                    <td class="bg-success text-white">Manhã</td>
+                                    <td class="bg-success text-white">Morning</td>
+                                    <td class="bg-success text-white">Morning</td>
+                                    <td class="bg-success text-white">Morning</td>
                                 </tr>
                                 <tr>
                                     <td>
@@ -118,7 +118,7 @@
                                         <!-- <hr /> -->
                                         <p class="bg-primary rounded-top rounded-bottom"><b>&emsp;09:30 -
                                                 09:45 </b>
-                                            Intervalo
+                                            Break
                                         </p>
                                         <!-- <hr /> -->
                                         <p><b>08:30 - 09:30</b> Abertura<br><em>Atividade</em></p>
@@ -129,7 +129,7 @@
                                         <!-- <hr /> -->
                                         <p class="bg-primary rounded-top rounded-bottom"><b>&emsp;09:30 -
                                                 09:45 </b>
-                                            Intervalo
+                                            Break
                                         </p>
                                         <!-- <hr /> -->
                                         <p><b>08:30 - 09:30</b> Abertura<br><em>Atividade</em></p>
@@ -140,7 +140,7 @@
                                         <!-- <hr /> -->
                                         <p class="bg-primary rounded-top rounded-bottom"><b>&emsp;09:30 -
                                                 09:45 </b>
-                                            Intervalo
+                                            Break
                                         </p>
                                         <!-- <hr /> -->
                                         <p><b>08:30 - 09:30</b> Abertura<br><em>Atividade</em></p>
@@ -148,21 +148,21 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="text-success bg-light"><b>12:00 - 14:00</b> Almoço</td>
-                                    <td class="text-success bg-light"><b>12:00 - 14:00</b> Almoço</td>
-                                    <td class="text-success bg-light"><b>12:00 - 14:00</b> Almoço</td>
+                                    <td class="text-success bg-light"><b>12:00 - 14:00</b> Lunch</td>
+                                    <td class="text-success bg-light"><b>12:00 - 14:00</b> Lunch</td>
+                                    <td class="text-success bg-light"><b>12:00 - 14:00</b> Lunch</td>
                                 </tr>
                                 <tr>
-                                    <td class="bg-success text-white">Tarde</td>
-                                    <td class="bg-success text-white">Tarde</td>
-                                    <td class="bg-success text-white">Tarde</td>
+                                    <td class="bg-success text-white">Afternoon</td>
+                                    <td class="bg-success text-white">Afternoon</td>
+                                    <td class="bg-success text-white">Afternoon</td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <p><b>14:00 - 15:40</b> Abertura<br><em>Atividade</em></p>
                                         <!-- <hr /> -->
                                         <p class="bg-primary rounded-top rounded-bottom"><b>&emsp;15:40 - 15:50</b>
-                                            Intervalo
+                                            Break
                                         </p>
                                         <!-- <hr /> -->
                                         <p><b>15:50 - 17:20</b> Abertura<br><em>Atividade</em></p>
@@ -172,7 +172,7 @@
                                         <p><b>14:00 - 15:40</b> Abertura<br><em>Atividade</em></p>
                                         <!-- <hr /> -->
                                         <p class="bg-primary rounded-top rounded-bottom"><b>&emsp;15:40 - 15:50</b>
-                                            Intervalo
+                                            Break
                                         </p>
                                         <!-- <hr /> -->
                                         <p><b>15:50 - 17:20</b> Abertura<br><em>Atividade</em></p>
@@ -182,7 +182,7 @@
                                         <p><b>14:00 - 15:40</b> Abertura<br><em>Atividade</em></p>
                                         <!-- <hr /> -->
                                         <p class="bg-primary rounded-top rounded-bottom"><b>&emsp;15:40 - 15:50</b>
-                                            Intervalo
+                                            Break
                                         </p>
                                         <!-- <hr /> -->
                                         <p><b>15:50 - 17:20</b> Abertura<br><em>Atividade</em></p>
@@ -202,26 +202,25 @@
             <div class="row g-5">
                 <div class="col-lg-4 mb-2 mb-lg-0">
                     <div class="bg-white shadow rounded-lg p-4 sticky-top" style="top: 30px;">
-                        <h4 class="has-line-end">Programação detalhada</h4>
+                        <h4 class="has-line-end">Detailed Schedule</h4>
                         <nav id="TableOfContents">
                             <ul>
                                 <li><a href="#15-08">
-                                        <h5 class="text-success">Dia 15/08 - Terça-feira</h5>
+                                        <h5 class="text-success">August 15th - Tuesday</h5>
                                     </a>
                                     <ul>
                                         <li><a href="#15-08-abertura">08:30 - 09:30 - Abertura</a>
                                         </li>
-                                        <li><a href="#15-08-intervalo-manha">09:30 - 09:45 - Intervalo
-                                                <em>(Coffee-break)</em></a>
+                                        <li><a href="#15-08-intervalo-manha">09:30 - 09:45 <em>(Coffee-break)</em></a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li><a href="#16-08">
-                                        <h5 class="text-success">Dia 16/08 - Quarta-feira</h5>
+                                        <h5 class="text-success">August 16th - Wednesday</h5>
                                     </a>
                                 </li>
                                 <li><a href="#17-08">
-                                        <h5 class="text-success">Dia 17/08 - Quinta-feira</h5>
+                                        <h5 class="text-success">August 17th - Thursday</h5>
                                     </a>
                                 </li>
                             </ul>
@@ -231,8 +230,8 @@
                 <div class="col-lg-8">
                     <div class="content">
                         <!-- 15/08 -->
-                        <h2 id="15-08" class="text-success">15/08 - Terça-feira</h2>
-                        <h3 id="15-08-abertura">Abertura</h3>
+                        <h2 id="15-08" class="text-success">August 15th - Tuesday</h2>
+                        <h3 id="15-08-abertura">Opening Cerimony</h3>
                         <ul>
                             <li>Interest may vary, be fixed, or mixed, will on the lender&rsquo;s and characteristics
                             </li>
@@ -240,21 +239,15 @@
                             <li>The loan can be granted to anyone, as long as they make the loan application</li>
                         </ul>
                         <hr>
-                        <!-- <h2 id="what-you-know-about-loans">What You Know About Loans</h2>
-                        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-                            <iframe src="https://www.youtube.com/embed/jgAsPXRhTLQ"
-                                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;"
-                                allowfullscreen title="YouTube Video"></iframe>
-                        </div> -->
-                        <!-- <hr> -->
-                        <h3 id="15-08-intervalo-manha">Intervalo</h3>
+
+                        <h3 id="15-08-intervalo-manha">Break</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices accumsan ultricies morbi
                             purus dui pharetra, diam congue. Facilisi sapien eros, a sagittis, at quam dolor elit.
                             Malesuada elementum leo, ac volud rhtpat integer. Amet, dolor risus lectus platea lectus
                             faucibus mi, dictum. Ultricies</p>
 
                         <!-- 16/08 -->
-                        <h2 id="16-08" class="text-success">16/08 - Quarta-feira</h2>
+                        <h2 id="16-08" class="text-success">August 16th - Wednesday</h2>
                         <h3 id="16-08-abertura">Abertura</h3>
                         <ul>
                             <li>Interest may vary, be fixed, or mixed, will on the lender&rsquo;s and characteristics
@@ -263,21 +256,15 @@
                             <li>The loan can be granted to anyone, as long as they make the loan application</li>
                         </ul>
                         <hr>
-                        <!-- <h2 id="what-you-know-about-loans">What You Know About Loans</h2>
-                        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-                            <iframe src="https://www.youtube.com/embed/jgAsPXRhTLQ"
-                                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;"
-                                allowfullscreen title="YouTube Video"></iframe>
-                        </div> -->
-                        <!-- <hr> -->
-                        <h3 id="16-08-intervalo-manha">Intervalo</h3>
+
+                        <h3 id="16-08-intervalo-manha">Break</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices accumsan ultricies morbi
                             purus dui pharetra, diam congue. Facilisi sapien eros, a sagittis, at quam dolor elit.
                             Malesuada elementum leo, ac volud rhtpat integer. Amet, dolor risus lectus platea lectus
                             faucibus mi, dictum. Ultricies</p>
 
                         <!-- 17/08 -->
-                        <h2 id="17-08" class="text-success">17/08 - Quinta-feira</h2>
+                        <h2 id="17-08" class="text-success">August 17th - Thursday</h2>
                         <h3 id="17-08-abertura">Abertura</h3>
                         <ul>
                             <li>Interest may vary, be fixed, or mixed, will on the lender&rsquo;s and characteristics
@@ -286,14 +273,9 @@
                             <li>The loan can be granted to anyone, as long as they make the loan application</li>
                         </ul>
                         <hr>
-                        <!-- <h2 id="what-you-know-about-loans">What You Know About Loans</h2>
-                        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-                            <iframe src="https://www.youtube.com/embed/jgAsPXRhTLQ"
-                                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;"
-                                allowfullscreen title="YouTube Video"></iframe>
-                        </div> -->
+
                         <!-- <hr> -->
-                        <h3 id="17-08-intervalo-manha">Intervalo</h3>
+                        <h3 id="17-08-intervalo-manha">Break</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices accumsan ultricies morbi
                             purus dui pharetra, diam congue. Facilisi sapien eros, a sagittis, at quam dolor elit.
                             Malesuada elementum leo, ac volud rhtpat integer. Amet, dolor risus lectus platea lectus
@@ -318,7 +300,7 @@
                     <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
                         <ul class="list-unstyled list-inline mb-0 text-lg-center">
                             <li class="list-inline-item me-4 text-black">
-                                <h5><a href="mailto:organizacao.wer@gmail.com">Contate-nos:
+                                <h5><a href="mailto:organizacao.wer@gmail.com">Contact us:
                                         organizacao.wer@gmail.com</a></h5>
                             </li>
                         </ul>
